--- a/aws/projects/Project-101-kittens-carousel-static-website-ec2/kittens-carousel-cfn.yml
+++ b/aws/projects/Project-101-kittens-carousel-static-website-ec2/kittens-carousel-cfn.yml
@@ -36,7 +36,7 @@ Resources:
         - !Ref WebServerSecurityGroup
       Tags:
         - Key: Name
-          Value: !Sub Web Server of ${AWS::StackName} Stack
+          Value: !Sub Web Server of ${AWS::StackName}
       UserData: 
         Fn::Base64:
           !Sub |
